--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "font-awesome-iconset": "^5.15.0",
     "next": "12.0.3",
     "node-sass": "^6.0.1",
+    "query-string": "^7.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-fontawesome": "^1.7.1",
