--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,7 @@
     "dev": "next dev",
     "build": "next build",
     "export": "next export",
-    "deploy": "npm run build && npm run export",
+    "deploy": "npm run build",
     "start": "next start",
     "lint": "next lint"
   },
